# alma-sails-codebase

./: .gitignore  README.md  __init__.py  config.py  db.py  logging.py  prefect.env  pyproject.toml  requirements-locked.txt  todo.md  utils.py
alma_ops/: __init__.py  casa_driver.py  config.py  db.py  logging.py  utils.py
alma_ops/autoselfcal/: run_autoselfcal.sh  run_autoselfcal_fixed.sh  run_autoselfcal_flexible.sh  run_autoselfcal_prep.sh
alma_ops/autoselfcal_helpers/: run_selfcal.sh
alma_ops/checks/: listobs.py  raw_asdms.py  split_products.py  summary.py
alma_ops/downloads/: __init__.py  fetch.py  organize.py  run_download.sh  status.py
alma_ops/listobs/: run_listobs.sh  submit_headless_listobs.py
alma_ops/splits/: run_split.sh  submit_headless_split.py
checks/: __init__.py
docs/database_management/: database_creation.md  database_structure.md
downloads/: fetch.py
flows/: __init__.py  bootstrap.py  mous_autoselfcal.py  mous_autoselfcal_prep.py  mous_download.py  mous_post_autoselfcal_organize.py  mous_post_download_organize.py  mous_post_split_listobs.py  mous_post_split_organize.py  mous_split.py  pipeline_state_monitor.py  prefect.yaml  test_script.py
schemas/: database_schema.sql
scripts/: add_spw_remap.py  add_url.py  bootstrap.py  check_database.py  db_populate_metadata.py  db_populate_num_asdms.py  fix_split_products.py  mark_listobs_complete.py  mous_download.py  mous_listobs.py  mous_selfcal.py  mous_split.py  report_data_columns.py  run_listobs_all_ms.py
splits/: run_headless_split.py  submit_headless_split.py
(+5 files in other folders)
