[project]
name = "alma-sails-codebase"
version = "0.1.0"
description = "Codebase and data pipeline for the ALMA-SAILS project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canfar>=1.1.1",
    "pandas>=2.3.3",
    "prefect>=3.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
